--- a/src/app/modules/maintainence/helpdeskAdmin.component.html
+++ b/src/app/modules/maintainence/helpdeskAdmin.component.html
@@ -1,124 +1,134 @@
 <div id="helpdesk-list" class="col s12 tab-content padding-zero" style="display: block;">
-    <div class="employee-form helpdesk-emp">
-        <form class="row m-bottom0">
-            <div class="custom-input-field m-bottom0 col s12 l3">
-                <h6>Search by Status</h6>
-                <select materialize="material_select" [materializeSelectOptions]="issueStatusCollection" [(ngModel)]="selectedStatus" (change)="onIssueStatusChanged($event.target.value)">
+<div class="employee-form helpdesk-emp">
+    <div class="row m-bottom0">
+        <div class="custom-input-field m-bottom0 col s12 l3">
+            <h6>Search by Status</h6>
+            <select materialize="material_select" [materializeSelectOptions]="issueStatusCollection" [(ngModel)]="selectedStatus" (change)="onIssueStatusChanged($event.target.value)">
                     <option *ngFor="let option of issueStatusCollection" [value]="option.id">{{option.text}}</option>
                 </select>
-            </div>
-        </form>
+        </div>
     </div>
-    <div class="row padding-20 m-bottom0">
-        <div class="col s12 padding-zero table-container">
-            <div *ngIf="helpDeskTicketList.length > 0" class="reimbursement-wrapper approvals-data">
-                <basic-grid [(source)]='helpDeskTicketList' gridPagination='bottom' gridOptions='{"colWidths":[25,10,10,10,19,7,7,6,6],"widthType":"%","useScroll":false}'>
-                    <basic-cell cell='' headerLabel=''>
-                        <template let-item='row'>
-                            <div class="padding-10">
-                                <div class="row m-bottom0 employee-data hide-on-med-and-down">
-                                    <div class="col s12 m4 center-align padding-zero">
-                                        <div class="employee-search-img">
-                                            <a><img [src]="item.imagePath" alt="" class="circle responsive-img"></a>
-                                        </div>
-                                        <div class="employee-id">
-                                            <h5>{{item.employeeId}}</h5>
+</div>
+<div class="row main-data-container">
+    <div class="col s12 padding-zero">
+        <div class="reimbursement-wrapper approvals-data" *ngIf="helpDeskTicketList.length > 0">
+            <div class="row m-bottom0 header hide-on-med-and-down">
+                <div class="col s12 m1 offset-m3">
+                    <h5 class="title">Ticket ID</h5>
+                </div>
+                <div class="col s12 m1">
+                    <h5 class="title">Request Date</h5>
+                </div>
+                <div class="col s12 m1">
+                    <h5 class="title">Assigned To</h5>
+                </div>
+                <div class="col s12 m2">
+                    <h5 class="title">Description</h5>
+                </div>
+                <div class="col s12 m1">
+                    <h5 class="title">Type / Severity</h5>
+                </div>
+                <div class="col s12 m1">
+                    <h5 class="title">Status</h5>
+                </div>
+            </div>
+            <div class="approvals">
+                <basic-grid [(source)]='helpDeskTicketList' gridPagination='bottom' gridOptions='{"colWidths":[100],"widthType":"%","useScroll":false}'
+                    [isHeaderVisible]=false>
+                    <basic-cell>
+                        <template #bg let-item='row'>
+                            <div class="approvals-wrapper">
+                                <div class="row m-bottom0 valign-wrapper">
+                                    <div class="col s12 m10 offset-m1 l3">
+                                        <div class="row m-bottom0 employee-data">
+                                            <div class="col s12 m4 center-align">
+                                                <div class="employee-search-img">
+                                                    <a><img [src]="item.imagePath" alt="" class="circle responsive-img"></a>
+                                                </div>
+                                                <div class="employee-id">
+                                                    <h5>{{item.employeeId}}</h5>
+                                                </div>
+                                            </div>
+                                            <div class="col s12 m8 search-result-align">
+                                                <div class="employee-name">
+                                                    <h5>{{item.employeeName}}</h5>
+                                                </div>
+                                                <div class="employee-profile">
+                                                    <h6>{{item.designation}}</h6>
+                                                    <h6>{{item.address|location}}</h6>
+                                                </div>
+                                                <div class="employee-contact-info">
+                                                    <h6 class="email-id">{{item.email}}</h6>
+                                                    <h6>t : +91 22 4153.0200 x 000</h6>
+                                                    <h6>m : {{item.mobile}}</h6>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col s12 m8 search-result-align">
-                                        <div class="employee-name">
-                                            <h5>{{item.employeeName}}</h5>
+                                    <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Ticket ID</span>
+                                        <div class="details-data">{{item.number}}</div>
+                                    </div>
+                                    <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Request Date</span>
+                                        <div class="details-data">{{item.issueDate}}</div>
+                                    </div>
+                                    <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Assigned To</span>
+                                        <div class="details-data">{{item.assignedToName}}</div>
+                                    </div>
+                                    <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Description</span>
+                                        <div class="details-data">{{item.description}}</div>
+                                    </div>
+                                    <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Description</span>
+                                        <div class="details-data"> {{item.type}}<span>-</span>{{item.severity}}</div>
+                                    </div>
+
+                                    <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Status</span><span *ngIf="item.status == 1">
+                                           Pending For Approval
+                                        </span>
+                                        <span *ngIf="item.status == 2">
+                                            Open
+                                        </span>
+                                        <span *ngIf="item.status == 3">
+                                          Rejected
+                                        </span>
+                                        <span *ngIf="item.status == 4">
+                                            In Progress
+                                        </span>
+                                        <span *ngIf="item.status == 5">
+                                           On Hold
+                                        </span>
+                                        <span *ngIf="item.status == 6">
+                                          Resolved
+                                        </span>
+                                        <span *ngIf="item.status == 7">
+                                          Cancelled
+                                        </span>
+                                    </div>
+                                    <div>
+                                        <div class="col s12 leave-action right-align" *ngIf="item.status != 1">
+                                            <a class="edit-icon expense-icon" title="Edit" type='button' value="Edit" href="/#/my/helpdesk/details/{{item.ID}}/0/{{selectedStatus}}"><i class="fa fa-pencil"></i></a>
                                         </div>
-                                        <div class="employee-profile">
-                                            <h6>{{item.designation}}</h6>
-                                            <h6>{{item.address|location}}</h6>
+                                        <div class="col s12 leave-action right-align" *ngIf="item.status == 1">
+                                            <a class="edit-icon expense-icon disabled " title="Edit" type='button' value="Edit" href="#"><i class="fa fa-pencil disabled "></i></a>
                                         </div>
-                                        <div class="employee-contact-info">
-                                            <h6 class="email-id">{{item.email}}</h6>
-                                            <h6>t : +91 22 4153.0200 x 000</h6>
-                                            <h6>m : {{item.mobile}}</h6>
+
+                                        <div class="col s12 leave-action right-align padding-zero">
+                                            <a href="/#/my/helpdesk/details/{{item.ID}}/1/{{selectedStatus}}" class="expense-icon"><img src="assets/images/view-icon.svg" height="30px" width="30px" title="View Request"></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </template>
                     </basic-cell>
-                    <basic-cell cell='' headerLabel='TicketId'>
-                        <template let-item='row'>
-                            {{item.number}}
-                        </template>
-                    </basic-cell>
-                    <basic-cell cell='' headerLabel='Requested Date'>
-                        <template let-item='row'>
-                            {{item.issueDate}}
-                        </template>
-                    </basic-cell>
-                    <basic-cell cell='' headerLabel='Assigned To'>
-                        <template let-item='row'>
-                            {{item.assignedToName}}
-                        </template>
-                    </basic-cell>
-                    <basic-cell cell='' headerLabel='Description'>
-                        <template let-item='row'>
-                            {{item.description}}
-                        </template>
-                    </basic-cell>
-                    <basic-cell cell='' headerLabel='Type/Severity'>
-                        <template let-item='row'>
-                            {{item.type}} <span>-</span>{{item.severity}}
-                        </template>
-                    </basic-cell>
-                    <basic-cell cell='' headerLabel='Status'>
-                        <template let-item='row'>
-                            <span *ngIf="item.status == 1">
-                                           Pending For Approval
-                                        </span>
-                            <span *ngIf="item.status == 2">
-                                            Open
-                                        </span>
-                            <span *ngIf="item.status == 3">
-                                          Rejected
-                                        </span>
-                            <span *ngIf="item.status == 4">
-                                            In Progress
-                                        </span>
-                            <span *ngIf="item.status == 5">
-                                           On Hold
-                                        </span>
-                            <span *ngIf="item.status == 6">
-                                          Resolved
-                                        </span>
-                            <span *ngIf="item.status == 7">
-                                          Cancelled
-                                        </span>
-                        </template>
-                    </basic-cell>
-                    <basic-cell cell='' headerLabel=''>
-                        <template let-item='row'>
-                            <div class="col s12 leave-action right-align" *ngIf="item.status != 1">
-                                <a class="edit-icon expense-icon" title="Edit" type='button' value="Edit" href="/#/my/helpdesk/details/{{item.ID}}/0/{{selectedStatus}}"><i class="fa fa-pencil"></i></a>
-                            </div>
-                            <div class="col s12 leave-action right-align" *ngIf="item.status == 1">
-                                <a class="edit-icon expense-icon disabled " title="Edit" type='button' value="Edit" href="#"><i class="fa fa-pencil disabled "></i></a>
-                            </div>
-                        </template>
-                    </basic-cell>
-                    <basic-cell cell='' headerLabel=''>
-                        <template let-item='row'>
-                            <div class="col s12 leave-action right-align padding-zero">
-                                <a href="/#/my/helpdesk/details/{{item.ID}}/1/{{selectedStatus}}" class="expense-icon"><img src="assets/images/view-icon.svg" height="30px" width="30px" title="View Request"></a>
-                            </div>
-                        </template>
-                    </basic-cell>
                 </basic-grid>
             </div>
-            <div class="row" *ngIf="rowData.length == 0">
-                <div class="col s12 table-note">
-                    <span>No help desk tickets available</span>
-                </div>
+        </div>
+        <div class="row" *ngIf="helpDeskTicketList.length == 0">
+            <div class="col s12 table-note">
+                <span>No help desk tickets available</span>
             </div>
         </div>
     </div>
+</div>
 </div>
 <loader-component [(loading)]='loaderModal' [(showMsg)]='loaderModalMsg' [callBackMsg]='loaderModalText' [cardLoading]="'isPage'"
     [isConformationModal]="isConformationModal"></loader-component>
