fixed issue attendence and helpdesk

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -253,7 +253,7 @@
                     <div class="overlay-upcoming"></div>
                 </div>
 
-                <div class="card white card-bg appraisal-bg phase2">
+                <div class="card white card-bg appraisal-bg">
                     <div class="row m-bottom0 height-60">
                         <div class="col s12">
                             <h5>Appraisal</h5>
@@ -263,6 +263,7 @@
                         <a *ngIf="appraisalAssignedTo" href="#/my/appraisal" class="btn-flat">My</a>
                         <h5 *ngIf="!appraisalAssignedTo">My</h5>
                     </div>
+                    <div class="overlay-upcoming"></div>
                 </div>
 
                 <div class="card white card-bg separation-bg">
