--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -905,6 +905,9 @@ span.form-code-val {
   .col-width-18 {
     width: 18%; }
 
+  .col-width-25 {
+    width: 25%; }
+
   .col-width-20 {
     width: 20%; }
 
@@ -2427,6 +2430,7 @@ footer.page-footer {
 /* 08-16-2016 */
 .scrollable-card-content table tr td {
   border: none;
+  padding: 0;
 }
 .reimbursement-wrapper .collapsible-body table tr {
 	background: #fff ;
