--- a/src/app/modules/helpdesk/helpdesk.approval.component.html
+++ b/src/app/modules/helpdesk/helpdesk.approval.component.html
@@ -9,14 +9,16 @@
                 <div class="col s12 m1">
                     <h5 class="title">Issue Date</h5>
                 </div>
-                <div class="col s12 m3">
+                <div class="col s12 m1">
                     <h5 class="title">Assigned To</h5>
                 </div>
                 <div class="col s12 m2">
                     <h5 class="title">Description</h5>
                 </div>
-                <div class="col s12 m2">
+                <div class="col s12 m1">
                     <h5 class="title">Type/Severity</h5>
+                </div>
+                <div class="col s12 m3">
                 </div>
             </div>
             <div class="approvals">
@@ -55,32 +57,37 @@
                                     <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Ticket ID</span>
                                         <div class="details-data">{{item.number}}</div>
                                     </div>
+                                    <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Issue Date</span>
+                                        <div class="details-data">{{item.issueDate}}</div>
+                                    </div>
                                     <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Assigned To</span>
                                         <div class="details-data">{{item.assignedToName}}</div>
                                     </div>
-                                    <div class="col s12 m6 l3"><span class="expense-label hide-on-large-only">Description</span>
+                                    <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Description</span>
                                         <div class="details-data">
                                             <div class="details-data">{{item.description}}</div>
                                         </div>
                                     </div>
-                                    <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Type/Severity</span>
+                                    <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Type/Severity</span>
                                         <div class="details-data">{{item.type}}<span>-</span>{{item.severity}}</div>
                                     </div>
-                                    <div class="custom-input-field input-field col s12">
-                                        <h6>Duration</h6>
-                                        <select placeholder="Duration" [(ngModel)]="item.duration" materialize="material_select">
-                                                        <option value="30">30</option>
-                                                        <option value="60">60</option>
-                                                        <option value="90">90</option>
-                                                        <option value="120">120</option>
-                                                </select>
+                                    <div class="col s12 m6 l3">
+                                        <div class="custom-input-field input-field col s12">
+                                            <h6>Duration</h6>
+                                            <select placeholder="Duration" [(ngModel)]="item.duration" materialize="material_select">
+                                                            <option value="30">30</option>
+                                                            <option value="60">60</option>
+                                                            <option value="90">90</option>
+                                                            <option value="120">120</option>
+                                                    </select>
+                                        </div>
+                                        <div class="custom-input-field input-field col s12">
+                                            <h6>Comments</h6>
+                                            <input type='text' name="comments" [(ngModel)]="item.comments" maxlength="900" />
+                                        </div>
+                                        <button class="btn custom-btn submit" type='button' (click)="approveLeave(item)" title="Approve" value='Approve'>Approve</button>
+                                        <button class="btn custom-btn cancel" (click)="rejectLeave(item)" title="Reject" type='button' value="Reject">Reject</button>
                                     </div>
-                                    <div class="custom-input-field input-field col s12">
-                                        <h6>Comments</h6>
-                                        <input type='text' name="comments" [(ngModel)]="item.comments" maxlength="900" />
-                                    </div>
-                                    <button class="btn custom-btn submit" type='button' (click)="approveLeave(item)" title="Approve" value='Approve'>Approve</button>
-                                    <button class="btn custom-btn cancel" (click)="rejectLeave(item)" title="Reject" type='button' value="Reject">Reject</button>
                                 </div>
                             </div>
                         </template>
