--- a/src/app/modules/maintainence/helpdeskAdmin.component.html
+++ b/src/app/modules/maintainence/helpdeskAdmin.component.html
@@ -13,7 +13,7 @@
     <div class="col s12 padding-zero">
         <div class="reimbursement-wrapper approvals-data" *ngIf="helpDeskTicketList.length > 0">
             <div class="row m-bottom0 header hide-on-med-and-down">
-                <div class="col s12 m1 offset-m3">
+               <div class="col s12 m1 offset-m3">
                     <h5 class="title">Ticket ID</h5>
                 </div>
                 <div class="col s12 m1">
@@ -28,8 +28,10 @@
                 <div class="col s12 m1">
                     <h5 class="title">Type / Severity</h5>
                 </div>
-                <div class="col s12 m1">
+                <div class="col s12 m2">
                     <h5 class="title">Status</h5>
+                </div>
+                <div class="col s12 m1">
                 </div>
             </div>
             <div class="approvals">
@@ -77,7 +79,7 @@
                                     <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Description</span>
                                         <div class="details-data">{{item.description}}</div>
                                     </div>
-                                    <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Description</span>
+                                    <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Description</span>
                                         <div class="details-data"> {{item.type}}<span>-</span>{{item.severity}}</div>
                                     </div>
 
@@ -103,16 +105,11 @@
                                           Cancelled
                                         </span>
                                     </div>
-                                    <div>
-                                        <div class="col s12 leave-action right-align" *ngIf="item.status != 1">
-                                            <a class="edit-icon expense-icon" title="Edit" type='button' value="Edit" href="/#/my/helpdesk/details/{{item.ID}}/0/{{selectedStatus}}"><i class="fa fa-pencil"></i></a>
-                                        </div>
-                                        <div class="col s12 leave-action right-align" *ngIf="item.status == 1">
-                                            <a class="edit-icon expense-icon disabled " title="Edit" type='button' value="Edit" href="#"><i class="fa fa-pencil disabled "></i></a>
-                                        </div>
-
-                                        <div class="col s12 leave-action right-align padding-zero">
-                                            <a href="/#/my/helpdesk/details/{{item.ID}}/1/{{selectedStatus}}" class="expense-icon"><img src="assets/images/view-icon.svg" height="30px" width="30px" title="View Request"></a>
+                                    <div class="col s12 m6 l1">
+                                        <div class="col s12 leave-action right-align valign-wrapper">
+                                            <a *ngIf="item.status != 1" class="edit-icon expense-icon" title="Edit" type='button' value="Edit" href="/#/my/helpdesk/details/{{item.ID}}/0/{{selectedStatus}}"><i class="fa fa-pencil"></i></a>
+                                            <a  *ngIf="item.status == 1" class="edit-icon expense-icon disabled " title="Edit" type='button' value="Edit" href="#"><i class="fa fa-pencil disabled "></i></a>
+                                             <a href="/#/my/helpdesk/details/{{item.ID}}/1/{{selectedStatus}}" class=""><img src="assets/images/view-icon.svg" height="30px" width="30px" title="View Request"></a>
                                         </div>
                                     </div>
                                 </div>
