--- a/src/app/modules/approvals/profile/profile.requestview.html
+++ b/src/app/modules/approvals/profile/profile.requestview.html
@@ -116,7 +116,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template #tmplRepeater let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row m-bottom10">
                                                                             <div class="col s8">
@@ -180,7 +180,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template #tmplRepeater  let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row">
                                                                             <div class="col s7">
@@ -275,7 +275,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template #tmplRepeater  let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row valign-wrapper">
                                                                             <div class="col s12">
@@ -333,7 +333,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template #tmplRepeater  let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row">
                                                                             <div class="col s8">
@@ -422,7 +422,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template  #tmplRepeater let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row">
                                                                             <div class="col s8">
@@ -487,7 +487,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template #tmplRepeater  let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row m-bottom10">
                                                                             <div class="col s7">
@@ -624,7 +624,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template  #tmplRepeater let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row">
                                                                             <div class="col s12">
@@ -665,7 +665,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template  #tmplRepeater let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row">
                                                                             <div class="col s8" *ngIf="item.changeId.indexOf(data.ID) != -1 && data.IsDeleted==false && data.ID !=0">
@@ -724,7 +724,7 @@
                                                     <div class="col s12 l10 m-top20">
                                                         <card [header]='item.name' [formReadonly]='true' [nonEditable]='true'>
                                                             <repeater [source]='p.model'>
-                                                                <template  #tmplRepeater let-data='item'>
+                                                                <template let-data='item'>
                                                                     <div class="saved-data">
                                                                         <div class="row valign-wrapper">
                                                                             <div class="col s12 valign">
